<resources>
    <string name="app_name">MySqlConnectorJava</string>
    <string name="main">Android Studio\nConnect Data Base\nJDBC</string>
    <string name="select">Select</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="id">Id</string>
</resources>
