<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/LinearLayout"
        android:gravity="center"
        tools:context=".MainActivity">

    <ImageView style="@style/ImageView" />

    <TextView
            style="@style/WrapWrap"
            android:gravity="center"
            android:text="@string/main"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold" />

    <Button
            android:id="@+id/mBtnSelect"
            style="@style/WrapWrap"
            android:text="@string/select" />

    <Button
            android:id="@+id/mBtnInsert"
            style="@style/WrapWrap"
            android:text="@string/insert" />

    <Button
            android:id="@+id/mBtnUpdate"
            style="@style/WrapWrap"
            android:text="@string/update" />

    <Button
            android:id="@+id/mBtnDelete"
            style="@style/WrapWrap"
            android:text="@string/delete" />

</LinearLayout>