<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/LinearLayout"
        tools:context=".InsertActivity">

    <EditText
            android:id="@+id/mEdtName"
            style="@style/MatchWrap"
            android:hint="@string/name" />

    <EditText
            android:id="@+id/mEdtPrice"
            style="@style/EditTextNumber"
            android:hint="@string/price" />

    <EditText
            android:id="@+id/mEdtType"
            style="@style/EditTextNumber"
            android:hint="@string/type" />

    <Button
            android:id="@+id/mBtnInsert"
            style="@style/Button"
            android:text="@string/insert" />

</LinearLayout>